# tira_kws

./: .gitignore  .index.html.swp  README.md  constants.py  dataloading.py  dtw.py  encoding.py  get_dataset_similarity.py  get_most_predicted_word.py  pyproject.toml  requirements.txt  setup_environ.sh  setup_environ_cpu.sh  setup_environ_cuda.sh  setup_environ_cuda12_1.sh  setup_environ_cuda12_8.sh  wfst.py
config/: default.yaml
notebooks/: close_negatives.ipynb  data_exploration.ipynb  embedding_geometry.ipynb  k2_inference.ipynb  large_tot_df.csv  large_tot_df_old.csv  negative_sentences.ipynb  oishani_metrics_vis.ipynb  oishani_zipa_inference.ipynb  positives.ipynb  roc_auc_vis.ipynb  test_debug_transcriptions.ipynb  tira_keyword_exploration.ipynb  zipa_debugging.ipynb  zipa_inference.ipynb  zipa_inference_ellie.ipynb
recycling/: README.md  dataloading_hf.py  dataset_similarity.py  dtw.py  encoding.py  kws_eval.py
scripts/: README.md  build_kws_list.py  cache_embeddings.py  dataset_similarity.py  keyphrase_list_builder.py  keyword_list_builder.py  kws_eval.py  kws_roc_auc.py  lid_roc_auc.py  make_keyword_ds.py  most_predicted_word.py  roc_auc.py  run_cache_embeddings.sh  run_roc_auc.sh  save_speaker_mask.py  text_preproc.py
src/: constants.py  dataloading.py  distance.py  dtw.py  encoding.py  wfst.py
sweeps/: clap_ipa_sweep.yaml
tests/: dataloading_test.py  distance_test.py  dtw_test.py  encoding_test.py  test_utils.py  wfst_test.py
tira_kws/: __init__.py  constants.py  dataloading.py  distance.py  interface_utils.py  textproc.py  wfst.py
(+1641 files in other folders)
